# StockTool

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  progress.md  pyproject.toml
app/: config.py  main.py
app/db/: firestore_client.py
app/models/: schemas.py
app/routers/: liff.py  line_webhook.py  oauth_callback.py  tick.py
app/services/: friend_repository.py  fuzzy_match.py  history_engine.py  market_data_client.py  oauth_service.py  parser.py  pnl_engine.py  sheets_client.py
app/static/: liff_dashboard.html  oauth_liff.html
docs/demo/: dashboard_demo.html  mock_history.json
scripts/: create_template_sheet.py  export_conversation.py  generate_mock_history.py  google_sheet_script.md  populate_stock_list.py  update_template_sheet.py
tests/: test_friend_repository.py  test_fuzzy_match.py  test_history_engine.py  test_liff.py  test_line_webhook.py  test_market_data_client.py  test_oauth_callback.py  test_oauth_service.py  test_parser.py  test_pnl_engine.py  test_sheets_client.py  test_tick.py
