[project]
name = "stocktool"
version = "0.1.0"
description = "LINE 股市記帳小工具"
authors = [
    {name = "Angie"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "line-bot-sdk (>=3.23.1,<4.0.0)",
    "google-api-python-client (>=2.197.0,<3.0.0)",
    "google-auth (>=2.55.0,<3.0.0)",
    "google-auth-oauthlib (>=1.4.0,<2.0.0)",
    "google-cloud-firestore (>=2.27.0,<3.0.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "thefuzz (>=0.22.1,<0.23.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
